# LogScope

./: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE  LogScope Security.md  README.md  SECURITY_MODULE_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: drain3.ini  security.yaml  thresholds.yaml
grafana/dashboards/: prometheus-dashboard.json  sample-dashboard.json
grafana/datasources/: sample-datasource.yaml
k8s/: api-configmap.yaml  api-deployment.yaml  api-service.yaml  dashboard-deployment.yaml  dashboard-service.yaml  grafana-deployment.yaml  grafana-service.yaml  kustomization.yaml  namespace.yaml
monitoring/loki/: local-config.yaml
monitoring/prometheus/: prometheus.yml
src/: __init__.py
src/api/: main.py  schemas.py
src/core/: __init__.py  detector.py  drift.py  frequency.py  parameter.py  sequence.py
src/dashboard/: app.py  app_new.py
src/data/: generate_logs.py  live_log_generator.py  live_logs.csv  log_patterns.yaml  synthetic_logs.csv
src/integration/: __init__.py  security_bridge.py
src/logscope/: __init__.py
src/logscope.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/parsing/: log_parser.py
src/security/: __init__.py  metrics.py  orchestrator.py  schemas.py
src/security/detectors/: __init__.py  brute_force.py  exfiltration.py  malware_beacon.py  priv_esc.py  sql_injection.py
src/security/intelligence/: __init__.py
tests/: test_anomaly_scoring.py  test_detector.py  test_logmonitor.py  test_parser.py
tests/security/: __init__.py  test_detectors.py  test_integration.py
(+1 files in other folders)
