[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logscope"
version = "0.1.0"
description = "Real-time log anomaly detection with FastAPI, Streamlit, and Drain3"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "LogScope"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
